--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -24,7 +24,7 @@ header h1 {
     margin: 1.5em 0;
 }
 a {
-  color: inherit;
+  color: #000;
   text-decoration: underline;
   font-weight: bold;
 }
